# corim-rs

./: Cargo.toml
.github/workflows/: build-test.yml  clippy.yml
src/: comid.rs  core.rs  corim.rs  coswid.rs  cotl.rs  lib.rs  numbers.rs  openssl.rs  test.rs  triples.rs  x509chain.rs
src/error/: corim.rs
testdata/: good-corim.json
testdata/x509/certs/: generate-certs.sh  int.cert.pem  int.key.pem  leaf.cert.pem  root.cert.pem  root.key.pem
