[package]
name = "corim-rs"
version = "0.2.0"
authors = ["Larry Dewey <larrydewey@proton.me>"]
homepage = "https://github.com/larrydewey/corim-rs"
repository = "https://github.com/larrydewey/corim-rs"
edition = "2021"
description = "Rust implementation of CORIM (Concise Reference Integrity Manifest)"
keywords = ["corim", "rim", "ietf", "cbor", "cose"]
categories = [
    "os",
    "os::linux-apis",
    "parsing",
    "network-programming",
    "hardware-support",
]
exclude = [".gitignore", ".github/*"]
rust-version = "1.85.0"
license = "MIT"

[dependencies]
serde = { version = "^1", features = ["derive"] }
ciborium = { version = "^0.2" }
derive_more = { version = "^2", features = [
    "try_from",
    "from",
    "as_ref",
    "deref",
    "deref_mut",
    "constructor",
] }
base64 = "0.22.1"
oid = { version = "0.2.1", features = ["serde", "serde_support"] }
uuid = "1.16.0"
serde_json = {version = "1.0.140", features = [
    "raw_value",
    "arbitrary_precision",
]}
coset = { version = "0.3.8", features = ["std"] }
openssl = { version = "0.10.79", features = ["vendored"], optional=true}
rustls-native-certs = { version = "0.8.3", optional = true }
x509-parser = { version = "0.18.1", optional = true }
either = "1.15.0"

[features]
default = []
openssl = ["dep:openssl", "dep:rustls-native-certs", "dep:x509-parser"]

[dev-dependencies]
openssl-sys = "0.9.115"
foreign-types-shared = "0.1.1"

